# d2r-qt-info

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: generate_qrc.cmake  get_version_from_git.cmake
res/: AppIcon.icns  resources.qrc
res/json/: runeword_item_type_hierarchy.json  runewords.json  runewords_item_types_hierarchy.json
scripts/: dl-base-item-type-images.sh  dl-rune-images.sh  generate-rune-list.sh  generate-runewords.js
src/: MainWindow.cpp  MainWindow.h  constants.h  main.cpp
src/json/: utils.cpp  utils.h
src/json/types/: Runeword.h  RunewordItemTypesHierarchy.h  types.h
src/misc/: cli_parser.cpp  cli_parser.h  debug_utils.cpp  debug_utils.h  graph.cpp  graph.h  qt_utils.cpp  qt_utils.h
src/widgets/: CheckBoxImageWidget.cpp  CheckBoxImageWidget.h  FilterWidget.cpp  FilterWidget.h  RuneCheckBoxGridWidget.cpp  RuneCheckBoxGridWidget.h  RunewordDetailWidget.cpp  RunewordDetailWidget.h  SocketAmountCheckBoxGridWidget.cpp  SocketAmountCheckBoxGridWidget.h
